[project]
name = "py-ext"
version = "0.0.1"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
    "pybind11",
    "setuptools-rust",
    # "maturin>=0.13,<0.14",
]
build-backend = "setuptools.build_meta"
# build-backend = "maturin"

dependencies = []

[tool.isort]
profile="black"

